Hello World + More

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="http://bootswatch.com/sandstone/bootstrap.min.css">
     <title>Go App</title>
   </head>
   <body>
     <h1>AYYYOO</h1>
+      <div class="container">
+
+
+      <form class="form-control" action="new" method="post">
+        <input class="input-group" type="text" name="name" value="Peaches"><br />
+        <button type="submit" class="input-group btn-sm btn-success" >Submit</button>
+      </form>
+    </div>
   </body>
 </html>
